--- a/label 1.css
+++ b/label 1.css
@@ -4,7 +4,14 @@
     font-weight: bold;
 }
 
-
+* {
+    -webkit-print-color-adjust: exact !important;
+    /* Chrome, Safari 6 – 15.3, Edge */
+    color-adjust: exact !important;
+    /* Firefox 48 – 96 */
+    print-color-adjust: exact !important;
+    /* Firefox 97+, Safari 15.4+ */
+}
 
 body {
     width: 100%;
@@ -12,7 +19,7 @@ body {
     margin: 0;
     background-color: gray;
     color: black;
-    font-family: Tahoma, Verdana, Geneva, sans-serif; 
+    font-family: Tahoma, Verdana, Geneva, sans-serif;
     font-size: 20px;
     text-transform: uppercase;
 }
@@ -38,7 +45,7 @@ body {
 
 .fieldset {
     border: none;
-    padding: 2rem 0;
+    padding: 5rem 0;
     border-bottom: none;
     background-color: black;
 
@@ -137,32 +144,22 @@ inline {
 .label {
     width: 900px;
     height: 500px;
-    border: 3px solid red;
     margin: 30px;
-    position: relative;
+    background-color: #fff;
+    position: absolute;
+    border: 3px solid black;
 }
 
-.info-field {
-    border: 2px solid yellow;
-    height: 49%;
-    width: 500px;
-    position: absolute;
-    right: 3%;
-    margin-top: 2%;
-    display: flex;
-    flex-direction: column;
-    vertical-align: middle;
-    /* overflow: hidden; */
-}
+
 
 
 .info-title {
     /* border: 1px solid red; */
-    height: 60px;
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 60px;
+    width: 100%;
     background-color: black;
     fill-opacity: 1;
     color: white;
@@ -170,29 +167,29 @@ inline {
 }
 
 .info-title2 {
-    height: 100%;
-    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    width: 50%;
     background-color: black;
     color: white;
     font-size: 18px;
 }
 
 .text-box {
-    border: 4px solid rgb(0,0,255);
+    border: 4px solid rgb(0, 0, 255);
     height: 100%;
     position: relative;
     vertical-align: middle;
     font-size: 25px;
     align-content: center;
 
-    
+
 }
 
 .text-box2 {
-    border: 4px solid rgb(0,0,255);
+    border: 4px solid rgb(0, 0, 255);
     width: 50%;
     position: relative;
     vertical-align: middle;
@@ -201,94 +198,259 @@ inline {
 
 }
 
-.gen-order {
-    border: 2px solid rgb(255,255,0);
-    height: 20%;
-    width: 250px;
-    position: absolute;
-    right: 3%;
-    bottom: 108px;
-    margin-top: 5px;
-    display: flex;
-    flex-direction: column;
-    font-size: 30px;
-
-}
-
-.cust-order {
-    border: 2px solid yellow;
-    height: 19%;
-    width: 250px;
-    position: absolute;
-    right: 3%;
-    bottom: 2%;
-    display: flex;
-    flex-direction: column;
-    font-size: 30px;
-}
-
-.pkg-field {
-    border: 2px solid yellow;
-    height: 15%;
-    width: 250px;
-    position: absolute;
-    margin-left: 5%;
-    margin-top: 110px;
-    display: flex;
-    flex-direction: column;
-}
-
-.machine {
-    border: 2px solid yellow;
-    height: 13%;
-    width: 500px;
-    position: absolute;
-    margin-left: 5%;
-    margin-top: 210px;
-    display: flex;
-    flex-direction: row;
-}
-
-.ship-via {
-    border: 2px solid yellow;
-    height: 13%;
-    width: 500px;
-    position: absolute;
-    margin-left: 5%;
-    margin-top: 277px;
-    display: flex;
-    flex-direction: row;
-}
-
-.weight {
-    border: 2px solid yellow;
-    height: 13%;
-    width: 500px;
-    position: absolute;
-    margin-left: 5%;
-    bottom: 2%;
-    display: flex;
-    flex-direction: row;
-}
-
 .label-logo {
-    width: 200px;
-    height: 50px;
-    margin-left: 5%;
-    margin-top: 3%;
     display: flex;
-    align-items: center;
+    position: relative;
+    width: 200px;
+    height: 60px;
+    margin-right: 2%;
+    float: right;
+    /* border: 2px solid yellow; */
+
     /* background-color: rgb(54, 104, 219); */
 }
 
-.warehouse {
-    /* border: 2px solid yellow; */
-    height: 12%;
-    width: 300px;
-    position: absolute;
-    margin-left: 5%;
-    margin-top: -.1%;
-    padding: 3% 0;
+
+.bar {
     display: flex;
-    flex-direction: inline;
+    position: relative;
+    align-items: center;
+    width: 98%;
+    height: 20px;
+    background-color: #000;
+    color: #fff;
+    margin: 1%;
+}
+
+.bar2 {
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 72%;
+    height: 50px;
+    background-color: #000;
+    color: #fff;
+    margin: 1%;
+    /* border: 2px solid yellow; */
+
+}
+
+.inner-bar {
+    /* border: 2px solid yellow; */
+    display: flex;
+    align-items: center;
+    margin-left: 3%;
+    height: 60%;
+    font-size: 1.5em;
+}
+
+.bar3 {
+    display: flex;
+    align-items: left;
+    justify-content: flex-end;
+    width: 98%;
+    height: 20px;
+    background-color: #000;
+    position: relative;
+    margin: 5% 1% 1%;
+    /* border: 2px solid yellow; */
+}
+
+.item-number {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    align-items: start;
+    margin-left: 3%;
+    font-size: 280%;
+    height: 12%;
+    /* border: 2px solid yellow; */
+
+}
+
+.part-pic {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 43%;
+    width: 23%;
+    /* border: 2px solid yellow; */
+    margin-right: 2%;
+    margin-bottom: 2px;
+    float: right;
+
+}
+
+.desc {
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    width: 70%;
+    height: 150px;
+    /* border: 2px solid yellow; */
+    margin-left: 1%;
+}
+
+.conn-type {
+    display: flex;
+    align-items: center;
+    width: 70%;
+    margin-left: 1%;
+    font-weight: 200;
+    /* border: 2px solid yellow; */
+}
+
+.barcode {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: 70%;
+    height: 16%;
+    margin: .5% 1%;
+    vertical-align: top;
+    /* border: 2px solid yellow; */
+
+}
+
+.qty {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    position: absolute;
+    float: right;
+    margin-right: 1%;
+    margin-top: -2%;
+    margin-left: 74.5%;
+    /* border: 2px solid yellow; */
+
+
+}
+
+.qty-result {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    position: absolute;
+    float: right;
+    margin-left: 80.5%;
+    margin-top: -2%;
+    width: 40px;
+    height: 24px;
+    /* border: 2px solid yellow; */
+
+
+}
+
+.p65 {
+    display: flex;
+    align-items: start;
+    justify-content: left;
+
+    flex-wrap: wrap;
+    margin: -8.2% 2% 1% 1%;
+    height: 13%;
+    width: 25%;
+    float: right;
+    /* border: 2px solid yellow; */
+    font-size: x-small;
+    text-transform: none;
+    font-weight: 100;
+
+}
+
+.p65-style {
+    display: flex;
+    align-items: start;
+    justify-content: left;
+    align-content: start;
+
+
+}
+
+.made {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    position: absolute;
+    float: right;
+    margin-right: 1%;
+    margin-top: -12.5%;
+    margin-left: 87%;
+    height: 7%;
+    width: 7%;
+    /* border: 2px solid yellow; */
+
+}
+
+.plt {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    /* position: absolute; */
+    float: left;
+    margin: 0% 0% .5% 1%;
+    height: 6%;
+    width: auto;
+    font-weight: 100;
+    font-size: smaller;
+    /* border: 2px solid yellow; */
+}
+
+.mch {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    /* position: absolute; */
+    float: left;
+    margin: 0%;
+    height: 6%;
+    width: auto;
+    font-weight: 100;
+    font-size: smaller;
+    /* border: 2px solid yellow; */
+}
+
+
+.date {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    /* position: absolute; */
+    float: left;
+    margin: 0% 1% .5% 5%;
+    height: 6%;
+    width: 8%;
+    font-weight: 100;
+    font-size: smaller;
+    /* border: 2px solid yellow; */
+
+}
+
+.alt-num {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    position: relative;
+    float: right;
+    margin: 0% 0% 0% 0%;
+    height: 6%;
+    width: auto;
+    font-weight: 100;
+    font-size: smaller;
+    /* border: 2px solid yellow; */
+
+}
+
+.url {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    position: relative;
+    float: right;
+    margin: -3.1% 7% .5% 0%;
+    height: 5%;
+    width: auto;
+    font-weight: 100;
+    font-size: smaller;
+    /* border: 2px solid yellow; */
 }
